# exp

./: .gitignore  Makefile  Readme.md
a/: Makefile  Readme.md  TEST_LOGIC.md  generate_report.py  select.c  test_report.html  test_report.txt
b/: REQUIREMENTS_CHECK.md  pubspec.yaml
b/android/app/src/main/kotlin/com/example/b2/: MainActivity.kt
b/ios/Runner.xcodeproj/: project.pbxproj
b/lib/: admin_home.dart  login_page.dart  main.dart  models.dart  user_home.dart
b/linux/runner/: my_application.cc
b/web/: index.html
b/windows/runner/: Runner.rc
b1/: __init__.py  auth.py  gui_main.py  main.py  models.py  property_data.json  pyproject.toml  services.py  storage.py
b2/android/app/: build.gradle.kts
b2/lib/: admin_home.dart  auth_service.dart  storage_service.dart
b2/linux/: CMakeLists.txt
b2/macos/Runner.xcodeproj/: project.pbxproj
b2/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
b2/macos/Runner/Configs/: AppInfo.xcconfig
