[project]
name = "property-management-system"
version = "1.0.0"
description = "小区物业管理系统"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "models", "storage", "auth", "services"]

